<resources>
    <string name="app_name">TEST</string>
    <string name="name">name</string>
    <string name="ok">Button</string>
    <string name="cancel">Button</string>
    <string name="enter_your_name">enter your name</string>
    <string name="yeah">yeah</string>
    <string name="textview">TextView</string>
    <string name="name1">Name</string>
    <string name="emailaddress">emailAddress</string>
    <string name="password">password</string>
    <string name="add">+</string>
    <string name="devide">/</string>
    <string name="aboveBTN" />
    <string name="right">right</string>
    <string name="aboveBTN1">aboveBTN1</string>
    <string name="above">above</string>
    <string name="left">left</string>
    <string name="below">below</string>
    <string name="crown">crown</string>
    <string name="date">21.03.04</string>
    <string name="msg">밥줘~~</string>
    <string name="one">one</string>
    <string name="two">two</string>
    <string name="three">three</string>
    <string name="four">four</string>
    <string name="five">five</string>

</resources>