<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <Button
      android:id="@+id/one"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:onClick="onClick"
      android:text="@string/one" />

  <Button
      android:id="@+id/two"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:onClick="onClick"
      android:text="@string/two" />

  <Button
      android:id="@+id/three"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:onClick="onClick"
      android:text="@string/three" />

  <Button
      android:id="@+id/four"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:onClick="onClick"
      android:text="@string/four" />

  <Button
      android:id="@+id/five"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:gravity="center|center_horizontal"
      android:onClick="onClick"
      android:text="@string/five" />
</FrameLayout>