<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/crown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@id/imageView4"
        android:text="@string/crown"
        android:textSize="24sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/date" />

    <TextView
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/crown"
        android:layout_alignLeft="@id/crown"

        android:text="@string/msg" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="104dp"
        android:layout_height="110dp"
        app:srcCompat="@drawable/ic_clown_fish__1_" />

</RelativeLayout>